# GirderMedViewer

./: CONTRIBUTING.rst  LICENSE  README.md  app.template.cfg  pyproject.toml
.github/workflows/: test_and_release.yml
bundles/desktop/: README.md  run.py
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
bundles/docker/setup/: apps.yml  requirements.txt
examples/jupyter/: show.ipynb
examples/launcher/: index.html  launcher.json
girdermedviewer/: README.rst
girdermedviewer/app/: components.py  core.py  girder_utils.py  objects.py  utils.py  vtk_utils.py
girdermedviewer/app/girder/: components.py  utils.py
girdermedviewer/app/vtk/: components.py  utils.py
tests/: test_import.py
utils/girdermedviewer_plugin/: README.md  setup.py
utils/girdermedviewer_plugin/girdermedviewer_filemodel/: __init__.py
